<resources>
    <string name="app_name">LookUp</string>
    <string name="faldi">Faldi</string>
    <string name="Status">Morning</string>
    <string name="greet_txt">Good</string>
    <string name="ready_to_review">Ready to review?</string>
    <string name="title_vid">Title</string>
    <string name="description">What is LookUp? LookUp is application that can detect whether the video is deepfake or not</string>
    <string name="description2">Deep fake is a video which their face or body is edited, it can be very dangerous because can spread misinformation</string>
    <string name="description3">Upload a video and let our deepfake machine decide deepfake or not</string>
    <string name="title">TextView</string>
    <string name="next">Next</string>
    <string name="deepfake">DeepFake?</string>
    <string name="your_task">Your Task</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="start">START</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="legit">Legit</string>
    <string name="deepfake_tbn">DeepFake</string>
    <string name="hurray">Hurray !!</string>
    <string name="correct1">you guessed it correctly</string>
    <string name="correct2">This is one of Deep fake videos</string>
    <string name="sorry">Sorry</string>
    <string name="incorrect1">but your guess is wrong</string>
    <string name="real">This is real video</string>
    <string name="on_review">On Review</string>
    <string name="input_your_title">Input Your Title</string>
    <string name="dd_mm_yyy">/dd/MM/yyy</string>
    <string name="status_title">Status : </string>
    <string name="is_it_deepfake">Is it Deepfake?</string>
    <string name="unknown">Unknown</string>
    <string name="getting_started">Getting Started</string>
</resources>